# Nomu

./: .clang-format  .gitignore  CMakeLists.txt  README.md  app_win32.rc  main.cpp  main_window.cpp  version.h
resources/: resources.qrc
src/: main_window.cc  main_window.h  remind_dialog.cc  remind_dialog.h  setting_flags.h
src/ui/: main_window.ui  remind_dialog.ui
